--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -2,6 +2,17 @@
   "function": {
     "addUserHandler": {
       "build": true,
+      "dependsOn": [
+        {
+          "attributes": [
+            "Name",
+            "Arn",
+            "StreamArn"
+          ],
+          "category": "storage",
+          "resourceName": "UserTable"
+        }
+      ],
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     },
