:construction: WIP get function

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -18,6 +18,17 @@
     },
     "getUserHandler": {
       "build": true,
+      "dependsOn": [
+        {
+          "attributes": [
+            "Name",
+            "Arn",
+            "StreamArn"
+          ],
+          "category": "storage",
+          "resourceName": "UserTable"
+        }
+      ],
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     },
